[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/demo/ui/candy-button/candy-color-picker-demo.gd" type="Script" id=1]
[ext_resource path="res://src/main/ui/candy-button/CandyColorPicker.tscn" type="PackedScene" id=2]

[node name="Demo" type="Node"]
script = ExtResource( 1 )

[node name="ColorPicker" parent="." instance=ExtResource( 2 )]
margin_left = -120.0
margin_top = 0.0
margin_right = 120.0
margin_bottom = 0.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 292.0
margin_top = 286.0
margin_right = 332.0
margin_bottom = 326.0

[connection signal="color_changed" from="ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="resized" from="ColorPicker" to="." method="_on_ColorPicker_resized"]
